# xml-healer

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
healer/: cli.py
healer/xml/: __init__.py  ast.py  ast_repair.py  ast_utils.py  classifier.py  classifier_utils.py  core.py  diff.py  diff_types.py  engine.py  errors.py  fixes.py  fuzzy.py  heal.py  parser.py  scoring.py  serializer.py  types.py
tests/: test_basic.py
