[project]
name = "xml-healer"
version = "0.1.0"
description = "Auto-healing tool for broken XML"
authors = [{name = "Jakub Mišovský"}]
dependencies = ["lxml"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
