[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xml-healer"
version = "1.2.3"
description = "A tool for healing and diffing broken XML."
authors = [
    { name="Jakub Mišovský", email="jakub.misovsky@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "lxml",
]

[project.scripts]
xml-healer = "healer.cli:main"

[tool.setuptools]
packages = ["healer", "healer.xml"]
include-package-data = true
