[metadata]
name = xml-healer
version = 0.1.0
description = A tool for healing and diffing broken XML.
long_description = file: README.md
long_description_content_type = text/markdown
author = YOUR_NAME
author_email = YOUR_EMAIL@example.com
license = MIT
license_file = LICENSE
url = https://pypi.org/project/xml-healer/

[options]
packages = find:
install_requires =
    lxml
python_requires = >=3.7

[options.packages.find]